<resources>
    <string name="app_name">Gecko_Launcher</string>

    <string name="hello_world">Google Android</string>
    <string name="action_settings">Settings</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>
    
    <string name="mediacenter">Media Center</string>
    <string name="kodi">KODI</string>
    <string name="playstore">Play Store</string>
    <string name="allapps">All Apps</string>
    <string name="fileexplorer">File Explorer</string>
    <string name="packageinstaller">Package Installer</string>
    <string name="settings">Settings</string>

    <string name="select_app_title">Please select an APP</string>
    <string name="del_custom_item">Remove</string>
    <string name="kodi_download_completed">Kodi has been downloaded sucessfully, please restart the device before using Kodi</string>
    <string name="download_title">Downloading</string>
    <string name="kodi_download">Downloading Kodi</string>
    <string name="MXPlayer_download">Downloading Configuration File</string>
    <string name="reboot_notice1">Restart</string>
    <string name="reboot_notice2">Please restart the device in order to use Kodi for the first time</string>
    <string name="reboot_notice3">Installing...</string>
    <string name="reboot_notice4">Please wait for a few seconds</string>
    <string name="install_failed">Install failed, please try again</string>
    <string name="internet_notice">No Internet connection, please check your network</string>
    <string name="download_cancel">Cancel</string>
</resources>
