<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rLayout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.himedia.mediacenterentrance|com.himedia.mediacenterentrance.MainActivity">

        <RelativeLayout
            android:layout_width="255dp"
            android:layout_height="393dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/media_center"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:text="@string/mediacenter"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>
        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rLayout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="273dp"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="org.xbmc.kodi|org.xbmc.kodi.Splash">

        <RelativeLayout
            android:layout_width="393dp"
            android:layout_height="195dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/kodi"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/kodi"
                android:textColor="@color/lightyellow"
                android:textSize="28sp"/>

        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rLayout_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="669dp"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.hisilicon.android.mediacenter|com.hisilicon.android.mediacenter.activity.TabBarExample">

        <RelativeLayout
            android:layout_width="255dp"
            android:layout_height="393dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/file_explorer"/>

            <TextView
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="25dp"
                android:text="@string/fileexplorer"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLayout_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rLayout_1"
        android:layout_alignLeft="@+id/rLayout_2"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.android.vending|com.android.vending.AssetBrowserActivity">

        <RelativeLayout
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/play_store"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/playstore"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLayout_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rLayout_1"
        android:layout_alignRight="@+id/rLayout_2"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.hitv.newappmanager|com.hitv.newappmanager.main.AppMainActivity">

        <RelativeLayout
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/all_apps"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/allapps"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLayout_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="927dp"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.openhourlab.pkginstaller|com.openhourlab.pkginstaller.activity.MainActivity">

        <RelativeLayout
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/package_installer"/>

            <TextView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/packageinstaller"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLayout_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rLayout_1"
        android:layout_alignLeft="@id/rLayout_6"
        android:background="@drawable/icon_select"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:tag="com.android.hisiliconsetting">

        <RelativeLayout
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/view7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/setting"/>

            <TextView
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/settings"
                android:textColor="@color/lightyellow"
                android:textSize="25sp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>